# openai-whisper

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_whisper.py  run_whisper_gemini.py
.github/workflows/: ci.yml
docs/: guide.md
legacy/: run_whisper_gemini.py
tests/: test_config.py  test_outputs.py  test_validation.py
whisper_cli/: cli.py
