[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-whisper-cli"
version = "0.1.0"
description = "Minimal CLI for MLX Whisper transcription"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mlx-whisper", "tomli>=2.0; python_version < '3.11'"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "pre-commit>=3.6"]

[project.scripts]
whisper-cli = "whisper_cli.cli:main"

[tool.setuptools]
packages = ["whisper_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
